# pycdmon

./: .gitignore  CONTRIBUTING.md  apiary.apib
cdmon-acme/: .gitignore  AGENTS.md  README.md  pyproject.toml
cdmon-acme/.github/workflows/: ci.yml
cdmon-acme/src/cdmon_acme/: __init__.py  cli.py  dns_solver.py  issuer.py  models.py
cdmon-acme/tests/: test_cli.py
docs/: endpoints.md
examples/: basic_usage.py
pycdmon/: AGENTS.md  LICENSE  README.md  pyproject.toml
pycdmon/skills/pycdmon-agent/: SKILL.md
pycdmon/src/pycdmon/: __init__.py  client.py  types.py
pycdmon/tests/: test_async_client.py  test_cli.py  test_client.py
src/pycdmon/: cli.py  errors.py
